miniextendr-macros/tests/ui/derive_rconvert_on_enum.rs
//! Test: `#[derive(RConvert)]` rejects enums (only newtype structs are valid).

use miniextendr_macros::RConvert;

#[derive(RConvert)]
enum Color {
    Red,
    Green,
}

fn main() {}
